--- a/app.html
+++ b/app.html
@@ -2,413 +2,26 @@
 <html lang="te">
 <head>
   <meta charset="UTF-8" />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
-  />
   <title>24/7 Telugu Short News</title>
-  <style>
-    :root {
-      --bg: #050608;
-      --card: #161821;
-      --accent: #00bcd4;
-      --accent-soft: rgba(0, 188, 212, 0.12);
-      --text: #f5f5f5;
-      --subtle: #9ca3af;
-      --border: #1f2937;
-      --radius-lg: 18px;
-      --shadow-soft: 0 18px 45px rgba(0, 0, 0, 0.6);
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      -webkit-tap-highlight-color: transparent;
-    }
-
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        sans-serif;
-      background: radial-gradient(circle at top left, #111827, #020617 55%);
-      color: var(--text);
-      min-height: 100vh;
-    }
-
-    .app-shell {
-      max-width: 768px;
-      margin: 0 auto;
-      padding: 16px 14px 24px;
-    }
-
-    header {
-      padding: 4px 2px 10px;
-    }
-
-    .app-title {
-      font-size: 1.4rem;
-      font-weight: 700;
-      letter-spacing: 0.02em;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
-
-    .badge-live {
-      font-size: 0.7rem;
-      padding: 2px 7px;
-      border-radius: 999px;
-      border: 1px solid rgba(34, 197, 94, 0.6);
-      background: rgba(16, 185, 129, 0.08);
-      color: #a7f3d0;
-      display: inline-flex;
-      align-items: center;
-      gap: 4px;
-    }
-
-    .badge-dot {
-      width: 6px;
-      height: 6px;
-      border-radius: 50%;
-      background: #22c55e;
-      box-shadow: 0 0 10px rgba(34, 197, 94, 0.9);
-    }
-
-    .subtitle {
-      margin-top: 6px;
-      font-size: 0.8rem;
-      color: var(--subtle);
-    }
-
-    .chips {
-      margin-top: 12px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 6px;
-      font-size: 0.72rem;
-    }
-
-    .chip {
-      padding: 4px 9px;
-      border-radius: 999px;
-      background: rgba(15, 23, 42, 0.96);
-      border: 1px solid rgba(148, 163, 184, 0.2);
-      color: #e5e7eb;
-      white-space: nowrap;
-    }
-
-    .chip-primary {
-      border-color: rgba(56, 189, 248, 0.6);
-      background: radial-gradient(circle at top left, #0f172a, #020617);
-      color: #e0f2fe;
-    }
-
-    main {
-      margin-top: 10px;
-    }
-
-    .list-meta {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 8px;
-      font-size: 0.73rem;
-      color: var(--subtle);
-    }
-
-    .news-list {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-
-    .card {
-      border-radius: var(--radius-lg);
-      background: radial-gradient(circle at top left, #020617, #020617 45%, #020617);
-      border: 1px solid var(--border);
-      box-shadow: var(--shadow-soft);
-      padding: 12px 12px 11px;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .card::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: radial-gradient(circle at top left, rgba(56, 189, 248, 0.09), transparent 60%);
-      pointer-events: none;
-    }
-
-    .card-inner {
-      position: relative;
-      z-index: 1;
-    }
-
-    .headline {
-      font-size: 0.98rem;
-      font-weight: 600;
-      line-height: 1.35;
-      margin-bottom: 6px;
-    }
-
-    .meta-row {
-      display: flex;
-      align-items: center;
-      gap: 6px;
-      margin-bottom: 4px;
-      font-size: 0.72rem;
-      color: var(--subtle);
-    }
-
-    .meta-dot {
-      width: 3px;
-      height: 3px;
-      border-radius: 50%;
-      background: rgba(148, 163, 184, 0.6);
-    }
-
-    .summary {
-      font-size: 0.85rem;
-      line-height: 1.45;
-      color: #e5e7eb;
-      margin-bottom: 10px;
-    }
-
-    .summary span {
-      background: linear-gradient(
-          to right,
-          rgba(56, 189, 248, 0.12),
-          transparent 60%
-        );
-      border-radius: 10px;
-      padding: 1px 4px;
-    }
-
-    .card-footer {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 8px;
-    }
-
-    .btn-more {
-      display: inline-flex;
-      align-items: center;
-      gap: 5px;
-      padding: 6px 11px;
-      font-size: 0.8rem;
-      border-radius: 999px;
-      border: 1px solid rgba(56, 189, 248, 0.9);
-      background: linear-gradient(
-        90deg,
-        rgba(8, 47, 73, 0.9),
-        rgba(15, 118, 110, 0.9)
-      );
-      color: #e0f2fe;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    .btn-more-icon {
-      font-size: 0.75rem;
-      translate: 0 0;
-      transition: transform 0.15s ease;
-    }
-
-    .btn-more:hover .btn-more-icon {
-      transform: translateX(2px);
-    }
-
-    .source-label {
-      font-size: 0.7rem;
-      color: var(--subtle);
-      padding: 4px 7px;
-      border-radius: 999px;
-      background: rgba(15, 23, 42, 0.95);
-    }
-
-    .empty-state,
-    .error-state {
-      margin-top: 40px;
-      text-align: center;
-      color: var(--subtle);
-      font-size: 0.9rem;
-    }
-
-    .loader {
-      margin: 28px auto 0;
-      width: 26px;
-      height: 26px;
-      border-radius: 50%;
-      border: 3px solid rgba(148, 163, 184, 0.3);
-      border-top-color: var(--accent);
-      animation: spin 0.7s linear infinite;
-    }
-
-    @keyframes spin {
-      to {
-        transform: rotate(360deg);
-      }
-    }
-
-    @media (min-width: 768px) {
-      .app-shell {
-        padding-top: 20px;
-      }
-      header {
-        padding-bottom: 14px;
-      }
-      .app-title {
-        font-size: 1.6rem;
-      }
-      .headline {
-        font-size: 1.02rem;
-      }
-      .summary {
-        font-size: 0.9rem;
-      }
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/static/css/styles.css" />
 </head>
 <body>
-  <div class="app-shell">
-    <header>
-      <div class="app-title">
-        24/7 Telugu Short News
-        <span class="badge-live">
-          <span class="badge-dot"></span>
-          LIVE
-        </span>
-      </div>
-      <p class="subtitle">
-        ఒక్కో వార్తను 2–3 లైన్లలో, కాపీ రైట్ సేఫ్ గా – పూర్తి వివరాల కోసం ఒరిజినల్ వెబ్‌సైట్‌కి రీడైరెక్ట్.
-      </p>
-      <div class="chips">
-        <span class="chip chip-primary">AI Short Summary</span>
-        <span class="chip">Original Source Redirect</span>
-        <span class="chip">Telugu Headlines Only</span>
-      </div>
+  <div class="app-root">
+    <header class="app-header">
+      <h1 class="app-title">24/7 Telugu Short News</h1>
     </header>
 
-    <main>
-      <div class="list-meta">
-        <span id="count-label">తాజా షార్ట్ న్యూస్</span>
-        <span id="updated-label"></span>
+    <main id="news-root" class="news-root">
+      <div class="card card--loading">
+        <div class="card-body">
+          <p>న్యూస్ లోడ్ అవుతోంది...</p>
+        </div>
       </div>
-
-      <div id="loader" class="loader"></div>
-      <div id="error" class="error-state" style="display:none;"></div>
-      <div id="empty" class="empty-state" style="display:none;">
-        న్యూస్ ఇంకా లోడ్ కాలేదు. కొద్దిసేపు తర్వాత మళ్లీ చెక్ చెయ్యండి.
-      </div>
-
-      <div id="news-list" class="news-list" style="display:none;"></div>
     </main>
   </div>
 
-  <script>
-    async function fetchNews() {
-      const loader = document.getElementById("loader");
-      const listEl = document.getElementById("news-list");
-      const errorEl = document.getElementById("error");
-      const emptyEl = document.getElementById("empty");
-      const countLabel = document.getElementById("count-label");
-      const updatedLabel = document.getElementById("updated-label");
-
-      loader.style.display = "block";
-      listEl.style.display = "none";
-      errorEl.style.display = "none";
-      emptyEl.style.display = "none";
-
-      try {
-        const res = await fetch("/api/news");
-        if (!res.ok) {
-          throw new Error("Failed to load news");
-        }
-        const data = await res.json();
-        const items = Array.isArray(data) ? data : data.items || [];
-
-        if (!items.length) {
-          loader.style.display = "none";
-          emptyEl.style.display = "block";
-          countLabel.textContent = "న్యూస్ లేవు";
-          updatedLabel.textContent = "";
-          return;
-        }
-
-        listEl.innerHTML = "";
-        items.forEach((item) => {
-          const title = item.title || "";
-          const summary =
-            item.summary || item.ai_summary || item.description || "";
-          const link = item.link || item.url || "#";
-          const source = item.source || "";
-          const published = item.published || item.published_at || "";
-
-          const card = document.createElement("article");
-          card.className = "card";
-          card.innerHTML = `
-            <div class="card-inner">
-              <h2 class="headline">${escapeHtml(title)}</h2>
-              <div class="meta-row">
-                ${
-                  published
-                    ? `<span>${escapeHtml(published)}</span><span class="meta-dot"></span>`
-                    : ""
-                }
-                ${
-                  source
-                    ? `<span>${escapeHtml(source)}</span>`
-                    : ""
-                }
-              </div>
-              <p class="summary"><span>${escapeHtml(summary)}</span></p>
-              <div class="card-footer">
-                <a class="btn-more"
-                   href="${link}"
-                   target="_blank"
-                   rel="noopener noreferrer">
-                  మరింత సమాచారం
-                  <span class="btn-more-icon">↗</span>
-                </a>
-                ${
-                  source
-                    ? `<span class="source-label">మూలం: ${escapeHtml(
-                        source
-                      )}</span>`
-                    : ""
-                }
-              </div>
-            </div>
-          `;
-          listEl.appendChild(card);
-        });
-
-        loader.style.display = "none";
-        listEl.style.display = "flex";
-        countLabel.textContent = `తాజా షార్ట్ న్యూస్ (${items.length})`;
-        updatedLabel.textContent = "ప్రతి న్యూస్ — 2–3 లైన్ల సమ్మరీ + రీడైరెక్ట్";
-      } catch (err) {
-        console.error(err);
-        loader.style.display = "none";
-        errorEl.style.display = "block";
-        errorEl.textContent =
-          "న్యూస్ లోడ్ చేయడంలో సమస్య వచ్చింది. కొద్దిసేపు తర్వాత మళ్లీ ప్రయత్నించండి.";
-      }
-    }
-
-    function escapeHtml(str) {
-      if (!str) return "";
-      return String(str)
-        .replace(/&/g, "&amp;")
-        .replace(/</g, "&lt;")
-        .replace(/>/g, "&gt;")
-        .replace(/"/g, "&quot;")
-        .replace(/'/g, "&#39;");
-    }
-
-    document.addEventListener("DOMContentLoaded", fetchNews);
-  </script>
+  <!-- UI logic (modular) -->
+  <script type="module" src="/static/js/main.js"></script>
 </body>
 </html>
